...
                    if (state is LogRegScreenState.Registration)
                        logRegScreenFinalButtonPadding
                    else
                        logRegScreenBigTopPadding
                )
                .fillMaxWidth()
                .testTag(tag = "log_reg_final_button"),
            text = stringResource(state.currentProcess.toUiString()),
            onClick = {
                proceedIntent(
                    ILogRegScreenIntent.ProceedFinalButtonAction
                )
            }
...

        if (state is LogRegScreenState.Login) {
            AppCustomButton(
                modifier = Modifier
                    .padding(logRegScreenFinalButtonPadding)
                    .fillMaxWidth()
                    .testTag(tag = "login_reset_password_button"),
                onClick = {
                    proceedIntent(
                        ILogRegScreenIntent.ChangeProcess(LogRegScreenProcess.PasswordReset)
                    )
                },
                text = stringResource(R.string.password_reset_option),
...

        if (state is LogRegScreenState.PasswordReset) {
            AppCustomButton(
                modifier = Modifier
                    .padding(logRegScreenFinalButtonPadding)
                    .fillMaxWidth()
                    .testTag(tag = "password_reset_back_button"),
                onClick = {
                    proceedIntent(
                        ILogRegScreenIntent.ChangeBackToLogin
                    )
                },
                text = stringResource(R.string.go_back_to_login),
...
