...
            .padding(logRegScreenBigTopPadding)
            .background(
                color = enterTextFieldColor,
                shape = logRegScreenMainShape
            )
            .fillMaxWidth()
            .testTag(tag = "login_email"),
        value = state.email,
        onValueChanged = {
            proceedIntent(
                ILogRegScreenIntent.UpdateEmail(it)
            )
        },
...
            .padding(logRegScreenBigTopPadding)
            .background(
                color = enterTextFieldColor,
                shape = logRegScreenMainShape
            )
            .fillMaxWidth()
            .testTag(tag = "login_password"),
        value = state.password,
        onValueChanged = {
            proceedIntent(
                ILogRegScreenIntent.UpdatePassword(it)
            )
        },
...
