...
        modifier = Modifier
            .background(
                color = enterTextFieldColor,
                shape = logRegScreenMainShape
            )
            .fillMaxWidth()
            .testTag(tag = "password_reset_email"),
        value = state.email,
        onValueChanged = {
            proceedIntent(
                ILogRegScreenIntent.UpdateEmail(it)
            )
        },
...
